# vivid

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  main.cpp  vivid.pri  vivid.pro
dependencies/: CMakeLists.txt  FetchModule.cmake
dependencies/glm/: CMakeLists.txt
dependencies/json/: CMakeLists.txt
examples/: CMakeLists.txt  advanced.cpp  basics.cpp  convert_maps.cpp  strong_types.cpp
examples/cmake/: CMakeLists.txt  main.cpp
examples/qmake/: convert_maps.cpp  main.cpp  strong_types.cpp  vivid.pro
include/vivid/: color.h  colormap.h  colortable.h  conversion.h  data.h  encoding.h  functions.h  fuzzy.h  interpolation.h  profiles.h  stream.h  strong.h  table.h  types.h  vivid.h
include/vivid/data/: blue-yellow.h  cool-warm.h  hsl-pastel.h  hsl.h  inferno.h  magma.h  plasma.h  rainbow.h  turbo.h  viridis.h  vivid.h  xterm.h
res/: colors.json
res/colormaps/: blue-yellow.json  cool-warm.json  hsl-pastel.json  inferno.json  magma.json  plasma.json  rainbow-hsl.json  rainbow.json  viridis.json  vivid.json
src/: adobe.cpp  ansi.cpp  cielab.cpp  cielch.cpp  ciexyz.cpp  color.cpp  colormap.cpp  colortable.cpp  conversion.cpp  functions.cpp  hcl.cpp  hex.cpp  hsl.cpp  hsv.cpp  index.cpp  indexed.cpp  interpolation.cpp  lab.cpp  lch.cpp  lrgb.cpp  name.cpp  oklab.cpp  rgb.cpp  rgb32.cpp  rgb8.cpp  srgb.cpp  strong.cpp  types.cpp  utility.cpp  xterm.cpp  xyz.cpp
tests/: CMakeLists.txt  catch.hpp  conversion.cpp  direct-conversions.cpp  test_conversion_fuzzy.cpp  test_conversion_manual.cpp  test_profiles.cpp  test_wrapping.cpp  utility.h  vivid-tests.pro
